more general get_post_processed_mappings

--- a/arachne/harvard_code.ipynb
+++ b/arachne/harvard_code.ipynb
@@ -2,10 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 1,
    "id": "f651e065",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    _         _                   _       \n",
+      "   / \\   _ __| | _____  _   _  __| | __ _ \n",
+      "  / _ \\ | '__| |/ / _ \\| | | |/ _` |/ _` |\n",
+      " / ___ \\| |  |   < (_) | |_| | (_| | (_| |\n",
+      "/_/   \\_\\_|  |_|\\_\\___/ \\__,_|\\__,_|\\__,_|\n",
+      "                                          \n",
+      "\n",
+      "Client Version: v2024.06.21+0.gcf6eeacde.dirty\n"
+     ]
+    }
+   ],
    "source": [
     "import arkouda as ak\n",
     "import arachne as ar\n",
@@ -18,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "04768463",
    "metadata": {},
    "outputs": [],
@@ -86,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 3,
    "id": "a7ca5c52",
    "metadata": {},
    "outputs": [
@@ -94,7 +109,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_559226/1960765740.py:1: DtypeWarning: Columns (26) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/tmp/ipykernel_2377603/1960765740.py:1: DtypeWarning: Columns (26) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  df = pd.read_csv(\"/scratch/users/oaa9/arkouda-njit/arachne/data/OL_dataset.csv\")\n"
      ]
     }
@@ -105,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 4,
    "id": "2753acf6",
    "metadata": {},
    "outputs": [
@@ -127,43 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "id": "5e543d90",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # Convert graph to NetworkX and run their subgraph isomorphism.\n",
-    "# G = nx.from_pandas_edgelist(df, source=\"src\", target=\"dst\", edge_attr=True, create_using=nx.DiGraph())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "id": "dd51b497",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# def edge_match(e1, e2):\n",
-    "#     return e1[\"connection_type\"] == e2[\"connection_type\"]\n",
-    "\n",
-    "# for tup in subgraphs_as_list_of_tuples:\n",
-    "#     h = nx.DiGraph()\n",
-    "#     src, dst, connection_type, color, identifier = tup\n",
-    "#     for i in range(len(src)):\n",
-    "#         u = src[i]\n",
-    "#         v = dst[i]\n",
-    "#         h.add_edge(u, v, connection_type=connection_type[i], color=color[i])\n",
-    "\n",
-    "#     start = time.time()\n",
-    "#     isomatcher = nx.isomorphism.DiGraphMatcher(G,h, edge_match=edge_match)\n",
-    "#     motifs = list(isomatcher.subgraph_monomorphisms_iter())\n",
-    "#     end = time.time()\n",
-    "#     print(f\"Finding {len(motifs):_} motifs took: {end-start} seconds.\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 5,
    "id": "671cb378",
    "metadata": {},
    "outputs": [
@@ -177,12 +156,12 @@
    ],
    "source": [
     "# NOTE: Make sure to change the server name to whatever is applicable in your environment. If running locally, then use only ak.connect().\n",
-    "ak.connect(\"n77\", 5555)"
+    "ak.connect(\"n115\", 5555)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 6,
    "id": "c67c3e9f",
    "metadata": {},
    "outputs": [],
@@ -192,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 7,
    "id": "afe29c9f",
    "metadata": {},
    "outputs": [
@@ -218,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 8,
    "id": "4a6f4bdd",
    "metadata": {},
    "outputs": [],
@@ -271,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 9,
    "id": "df78f686",
    "metadata": {},
    "outputs": [],
@@ -294,57 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
-   "id": "938407f8",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Querying for subgraph0...\n",
-      "Finding 696_460 motifs took: 2.450429677963257 seconds.\n",
-      "Reshaping isomorphisms took: 0.18763327598571777 seconds.\n",
-      "Generating mappings took: 0.6758084297180176 seconds.\n",
-      "\n",
-      "Querying for subgraph3...\n",
-      "Finding 5_048 motifs took: 2.9299545288085938 seconds.\n",
-      "Reshaping isomorphisms took: 0.02286529541015625 seconds.\n",
-      "Generating mappings took: 0.00629734992980957 seconds.\n",
-      "\n",
-      "Querying for subgraph2...\n",
-      "Finding 191_690 motifs took: 3.5665934085845947 seconds.\n",
-      "Reshaping isomorphisms took: 0.06579899787902832 seconds.\n",
-      "Generating mappings took: 0.26287078857421875 seconds.\n",
-      "\n",
-      "Querying for subgraph7...\n",
-      "Finding 91_718 motifs took: 1.5638353824615479 seconds.\n",
-      "Reshaping isomorphisms took: 0.05923175811767578 seconds.\n",
-      "Generating mappings took: 0.16738390922546387 seconds.\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "send_to_file = False\n",
-    "all_mappings = {}\n",
-    "for tup in subgraphs_as_list_of_tuples:\n",
-    "    subgraph_name = f\"subgraph{tup[4]}\"\n",
-    "    cap = 0\n",
-    "    print(f\"Querying for {subgraph_name}...\")\n",
-    "    curr_mapping = motif_to_viss(tup[0], tup[1], tup[2], cap)\n",
-    "    all_mappings[int(tup[4])] = curr_mapping\n",
-    "    print()\n",
-    "\n",
-    "    if send_to_file:\n",
-    "        filename = subgraph_name + f\"_motifs_capped_at_{cap}.json\"\n",
-    "        with open(filename, \"w\") as f:\n",
-    "            json.dump(curr_mapping[0], f)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 10,
    "id": "3ae6d03c",
    "metadata": {},
    "outputs": [],
@@ -377,74 +306,132 @@
     "    curr_mapping_id = 0\n",
     "    final_mappings = []\n",
     "    for src,dst,vals in zip(isos_by_edges_src_ndarray,isos_by_edges_dst_ndarray,vals_ndarray):\n",
-    "        if subgraph_id == 0 or subgraph_id == 1:\n",
-    "            if len(np.unique(vals)) == 1:\n",
-    "                final_mappings.append(isos_by_vertices[curr_mapping_id])\n",
-    "                curr_mapping_id += 1\n",
-    "                matches += 1\n",
-    "                continue\n",
-    "        else:\n",
-    "            inner_matches = {}\n",
-    "            for val in vals:\n",
-    "                if val not in inner_matches:\n",
-    "                    inner_matches[val] = 1\n",
-    "                else:\n",
-    "                    inner_matches[val] += 1\n",
-    "            if sorted(inner_matches.values()) == sorted(dict_to_check_against.values()):\n",
-    "                final_mappings.append(isos_by_vertices[curr_mapping_id])\n",
-    "                matches += 1\n",
-    "            curr_mapping_id += 1\n",
+    "        inner_matches = {}\n",
+    "        for val in vals:\n",
+    "            if val not in inner_matches:\n",
+    "                inner_matches[val] = 1\n",
+    "            else:\n",
+    "                inner_matches[val] += 1\n",
+    "        if sorted(inner_matches.values()) == sorted(dict_to_check_against.values()):\n",
+    "            final_mappings.append(isos_by_vertices[curr_mapping_id])\n",
+    "            matches += 1\n",
+    "        curr_mapping_id += 1\n",
     "\n",
     "    end = time.time()\n",
     "    print(f\"Before post processing number of motifs found was {number_isos_found} and after was {matches}\")\n",
-    "    print(matches == len(final_mappings))\n",
     "    print(f\"Post processing took: {end-start} seconds.\")\n",
-    "    print()"
+    "\n",
+    "    return final_mappings"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
-   "id": "be6b96fe",
+   "execution_count": null,
+   "id": "938407f8",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Querying for subgraph0...\n",
+      "Finding 696_460 motifs took: 2.4765231609344482 seconds.\n",
+      "Reshaping isomorphisms took: 0.18685626983642578 seconds.\n",
+      "Generating mappings took: 0.6457834243774414 seconds.\n",
       "Post processing subgraph0...\n",
       "Before post processing number of motifs found was 696460 and after was 696460\n",
-      "True\n",
-      "Post processing took: 7.382020711898804 seconds.\n",
+      "Post processing took: 5.734685182571411 seconds.\n",
       "\n",
+      "Querying for subgraph3...\n",
+      "Finding 5_048 motifs took: 2.877610445022583 seconds.\n",
+      "Reshaping isomorphisms took: 0.012549400329589844 seconds.\n",
+      "Generating mappings took: 0.0061342716217041016 seconds.\n",
       "Post processing subgraph3...\n",
       "Before post processing number of motifs found was 5048 and after was 5048\n",
-      "True\n",
-      "Post processing took: 2.487938165664673 seconds.\n",
+      "Post processing took: 2.4994661808013916 seconds.\n",
       "\n",
+      "Querying for subgraph2...\n",
+      "Finding 191_690 motifs took: 3.6195456981658936 seconds.\n",
+      "Reshaping isomorphisms took: 0.07360506057739258 seconds.\n",
+      "Generating mappings took: 0.2176060676574707 seconds.\n",
       "Post processing subgraph2...\n",
       "Before post processing number of motifs found was 191690 and after was 191690\n",
-      "True\n",
-      "Post processing took: 3.162606716156006 seconds.\n",
+      "Post processing took: 3.1428821086883545 seconds.\n",
       "\n",
+      "Querying for subgraph7...\n",
+      "Finding 91_718 motifs took: 1.5637075901031494 seconds.\n",
+      "Reshaping isomorphisms took: 0.059044837951660156 seconds.\n",
+      "Generating mappings took: 0.1499617099761963 seconds.\n",
       "Post processing subgraph7...\n",
       "Before post processing number of motifs found was 91718 and after was 44657\n",
-      "True\n",
-      "Post processing took: 2.5913400650024414 seconds.\n",
-      "\n"
+      "Post processing took: 2.6409900188446045 seconds.\n",
+      "\n",
+      "Querying for subgraph5...\n"
      ]
     }
    ],
    "source": [
+    "all_mappings = {}\n",
+    "cap = 0\n",
+    "send_to_file = True\n",
     "for tup in subgraphs_as_list_of_tuples:\n",
     "    subgraph_id = int(tup[4])\n",
     "    subgraph_name = f\"subgraph{subgraph_id}\"\n",
     "    subgraph_src = tup[0]\n",
     "    subgraph_dst = tup[1]\n",
-    "    color = tup[3]\n",
+    "    subgraph_connection_type = tup[2]\n",
+    "    subgraph_color = tup[3]\n",
+    "\n",
+    "    print(f\"Querying for {subgraph_name}...\")\n",
+    "    curr_mapping = motif_to_viss(subgraph_src, subgraph_dst, subgraph_connection_type, cap)\n",
+    "    all_mappings[subgraph_id] = curr_mapping\n",
     "\n",
     "    print(f\"Post processing {subgraph_name}...\")\n",
-    "    get_post_processed_mappings(subgraph_src, subgraph_dst, color, all_mappings[subgraph_id])"
+    "    map_to_write = get_post_processed_mappings(subgraph_src, subgraph_dst, subgraph_color, all_mappings[subgraph_id])\n",
+    "\n",
+    "    if send_to_file:\n",
+    "        filename = subgraph_name + f\"_motifs_capped_at_{cap}.json\" if cap != 0 else subgraph_name + f\"_motifs.json\"\n",
+    "        with open(filename, \"w\") as f:\n",
+    "            json.dump(map_to_write, f)\n",
+    "    \n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "16431dba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Convert graph to NetworkX and run their subgraph isomorphism.\n",
+    "G = nx.from_pandas_edgelist(df, source=\"src\", target=\"dst\", edge_attr=True, create_using=nx.DiGraph())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2f1dea0e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def edge_match(e1, e2):\n",
+    "    return e1[\"connection_type\"] == e2[\"connection_type\"]\n",
+    "\n",
+    "for tup in subgraphs_as_list_of_tuples:\n",
+    "    h = nx.DiGraph()\n",
+    "    src, dst, connection_type, color, identifier = tup\n",
+    "    for i in range(len(src)):\n",
+    "        u = src[i]\n",
+    "        v = dst[i]\n",
+    "        h.add_edge(u, v, connection_type=connection_type[i], color=color[i])\n",
+    "\n",
+    "    print(f\"Querying for {identifier}...\")\n",
+    "    start = time.time()\n",
+    "    isomatcher = nx.isomorphism.DiGraphMatcher(G,h,edge_match=edge_match)\n",
+    "    motifs = list(isomatcher.subgraph_monomorphisms_iter())\n",
+    "    end = time.time()\n",
+    "    print(f\"Finding {len(motifs):_} motifs took: {end-start} seconds.\")"
    ]
   }
  ],
