All functions working. Viecut added to metrics. small graph tests passed. After shell decompositio everything should be tested again.

--- a/arachne/arachne_sample.ipynb
+++ b/arachne/arachne_sample.ipynb
@@ -56,23 +56,7 @@
    "execution_count": null,
    "id": "86b36041",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "connected to arkouda server tcp://*:5555\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Cluster files written to:  /scratch/users/md724/arkouda-njit/arachne/output/log10_test_network_wcc_output_post.tsv\n",
-      "WCC found 0 clusters to be well-connected.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import arkouda as ak\n",
     "import arachne as ar\n",
@@ -81,12 +65,12 @@
     "import matplotlib.pyplot as plt\n",
     "import os\n",
     "# NOTE: Make sure to change the server name to whatever is applicable in your environment. If running locally, then use only ak.connect().\n",
-    "ak.connect(\"n4\", 5555)\n",
+    "ak.connect(\"n113\", 5555)\n",
     "# Create an Arachne graph from a test network file.\n",
-    "ar_network_graph = ar.read_tsv_file(os.path.abspath(\"./data/wcc/test_network_simple_15.tsv\"))\n",
-    "\n",
+    "ar_network_graph = ar.read_tsv_file(os.path.abspath(\"./data/wcc/test_network_simple_100.tsv\"))\n",
+    "print(\"Graph loaded.\")\n",
     "# Execute wcc with the absolute path to the generate and the create network file.\n",
-    "file_path = os.path.abspath(\"./data/wcc/test_clustering_simple_15.tsv\")\n",
+    "file_path = os.path.abspath(\"./data/wcc/test_clustering_simple_100.tsv\")\n",
     "output_path = os.path.abspath(\"./output/\")\n",
     "output_filename = \"_test_network_wcc_output_post.tsv\"\n",
     "\n",
@@ -118,7 +102,7 @@
     "import matplotlib.pyplot as plt\n",
     "import os\n",
     "# NOTE: Make sure to change the server name to whatever is applicable in your environment. If running locally, then use only ak.connect().\n",
-    "ak.connect(\"n4\", 5555)\n",
+    "ak.connect(\"n81\", 5555)\n",
     "# Create an Arachne graph from a test network file.\n",
     "#ar_network_graph = ar.read_tsv_file(os.path.abspath(\"./data/wcc/test_network_simple_3.tsv\"))\n",
     "ar_network_graph = ar.read_tsv_file(os.path.abspath(\"/scratch/users/md724/DataSets/UIUC/cit_patents/cit_patents_cleaned.tsv\"))\n",
@@ -147,7 +131,43 @@
    "execution_count": null,
    "id": "a3e0c47d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    _         _                   _       \n",
+      "   / \\   _ __| | _____  _   _  __| | __ _ \n",
+      "  / _ \\ | '__| |/ / _ \\| | | |/ _` |/ _` |\n",
+      " / ___ \\| |  |   < (_) | |_| | (_| | (_| |\n",
+      "/_/   \\_\\_|  |_|\\_\\___/ \\__,_|\\__,_|\\__,_|\n",
+      "                                          \n",
+      "\n",
+      "Client Version: v2024.06.21\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "connected to arkouda server tcp://*:5555\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cluster files written to:  /scratch/users/md724/arkouda-njit/arachne/output/log10_test_network_wcc_output_debug\n",
+      "WCC found 0 clusters to be well-connected.\n",
+      "Cluster files written to:  /scratch/users/md724/arkouda-njit/arachne/output/log2_test_network_wcc_output_debug\n",
+      "WCC found 0 clusters to be well-connected.\n",
+      "Cluster files written to:  /scratch/users/md724/arkouda-njit/arachne/output/sqrt_test_network_wcc_output_debug\n",
+      "WCC found 0 clusters to be well-connected.\n",
+      "Cluster files written to:  /scratch/users/md724/arkouda-njit/arachne/output/mult_test_network_wcc_output_debug\n",
+      "WCC found 0 clusters to be well-connected.\n"
+     ]
+    }
+   ],
    "source": [
     "import arkouda as ak\n",
     "import arachne as ar\n",
@@ -156,16 +176,16 @@
     "import matplotlib.pyplot as plt\n",
     "import os\n",
     "# NOTE: Make sure to change the server name to whatever is applicable in your environment. If running locally, then use only ak.connect().\n",
-    "ak.connect(\"n4\", 5555)\n",
+    "ak.connect(\"n81\", 5555)\n",
     "# Create an Arachne graph from a test network file.\n",
-    "ar_network_graph = ar.read_tsv_file(os.path.abspath(\"./data/wcc/test_network_simple_3.tsv\"))\n",
+    "ar_network_graph = ar.read_tsv_file(os.path.abspath(\"./data/wcc/test_network_simple_core_1.tsv\"))\n",
     "\n",
     "# Execute wcc with the absolute path to the generate and the create network file.\n",
-    "file_path = os.path.abspath(\"./data/wcc/test_clustering_simple_3.tsv\")\n",
+    "file_path = os.path.abspath(\"./data/wcc/test_clustering_simple_core_1.tsv\")\n",
     "output_path = os.path.abspath(\"./output/\")\n",
     "output_filename = \"_test_network_wcc_output_debug\"\n",
     "\n",
-    "criterion_variations = [\"log10\", \"log2\", \"sqrt\", \"mult\"]\n",
+    "criterion_variations = [\"log10\"]\n",
     "\n",
     "for variant in criterion_variations:\n",
     "    curr_output_filename = variant + output_filename\n",
