add checking of subgraph attributes size to automatically run edge picker

--- a/arachne/harvard_code.ipynb
+++ b/arachne/harvard_code.ipynb
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "938407f8",
    "metadata": {},
    "outputs": [
@@ -366,7 +366,38 @@
       "Before post processing number of motifs found was 91718 and after was 44657\n",
       "Post processing took: 2.6409900188446045 seconds.\n",
       "\n",
-      "Querying for subgraph5...\n"
+      "Querying for subgraph5...\n",
+      "Finding 2_308 motifs took: 339.46020793914795 seconds.\n",
+      "Reshaping isomorphisms took: 0.02213740348815918 seconds.\n",
+      "Generating mappings took: 0.006267547607421875 seconds.\n",
+      "Post processing subgraph5...\n",
+      "Before post processing number of motifs found was 2308 and after was 2308\n",
+      "Post processing took: 2.483154773712158 seconds.\n",
+      "\n",
+      "Querying for subgraph4...\n",
+      "Finding 163_562 motifs took: 339.74714040756226 seconds.\n",
+      "Reshaping isomorphisms took: 0.0892641544342041 seconds.\n",
+      "Generating mappings took: 0.23710989952087402 seconds.\n",
+      "Post processing subgraph4...\n",
+      "Before post processing number of motifs found was 163562 and after was 163562\n",
+      "Post processing took: 3.1784827709198 seconds.\n",
+      "\n",
+      "Querying for subgraph1...\n",
+      "Finding 696_460 motifs took: 7743.926843881607 seconds.\n",
+      "Reshaping isomorphisms took: 0.26030540466308594 seconds.\n",
+      "Generating mappings took: 0.8855459690093994 seconds.\n",
+      "Post processing subgraph1...\n",
+      "Before post processing number of motifs found was 696460 and after was 696460\n",
+      "Post processing took: 6.929918050765991 seconds.\n",
+      "\n",
+      "Querying for subgraph6...\n",
+      "Finding 310_382 motifs took: 24830.87238240242 seconds.\n",
+      "Reshaping isomorphisms took: 0.21153593063354492 seconds.\n",
+      "Generating mappings took: 0.6353244781494141 seconds.\n",
+      "Post processing subgraph6...\n",
+      "Before post processing number of motifs found was 310382 and after was 254696\n",
+      "Post processing took: 5.02346658706665 seconds.\n",
+      "\n"
      ]
     }
    ],
@@ -399,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "16431dba",
    "metadata": {},
    "outputs": [],
@@ -413,8 +444,57 @@
    "execution_count": null,
    "id": "2f1dea0e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Querying for 0...\n",
+      "Found 100 so far\n",
+      "Found 200 so far\n",
+      "Found 300 so far\n",
+      "Found 400 so far\n",
+      "Found 500 so far\n",
+      "Finding 501 motifs took: 331.4772734642029 seconds.\n",
+      "Querying for 2...\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "File \u001b[0;32m~/.conda/envs/arkouda-dev/lib/python3.10/_collections_abc.py:830\u001b[0m, in \u001b[0;36mMapping.__contains__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m    829\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m--> 830\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m[\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m]\u001b[49m\n\u001b[1;32m    831\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m:\n",
+      "File \u001b[0;32m~/.conda/envs/arkouda-dev/lib/python3.10/site-packages/networkx/classes/coreviews.py:53\u001b[0m, in \u001b[0;36mAtlasView.__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m     52\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__getitem__\u001b[39m(\u001b[38;5;28mself\u001b[39m, key):\n\u001b[0;32m---> 53\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_atlas\u001b[49m\u001b[43m[\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m]\u001b[49m\n",
+      "\u001b[0;31mKeyError\u001b[0m: 370396639527685",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[42], line 28\u001b[0m\n\u001b[1;32m     26\u001b[0m isomatcher \u001b[38;5;241m=\u001b[39m nx\u001b[38;5;241m.\u001b[39misomorphism\u001b[38;5;241m.\u001b[39mDiGraphMatcher(G,h,edge_match\u001b[38;5;241m=\u001b[39medge_match)\n\u001b[1;32m     27\u001b[0m motifs \u001b[38;5;241m=\u001b[39m []\n\u001b[0;32m---> 28\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m motif \u001b[38;5;129;01min\u001b[39;00m isomatcher\u001b[38;5;241m.\u001b[39msubgraph_monomorphisms_iter():\n\u001b[1;32m     29\u001b[0m     motifs\u001b[38;5;241m.\u001b[39mappend(motif)\n\u001b[1;32m     30\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(motifs) \u001b[38;5;241m%\u001b[39m \u001b[38;5;241m100\u001b[39m \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m0\u001b[39m:\n",
+      "File \u001b[0;32m~/.conda/envs/arkouda-dev/lib/python3.10/site-packages/networkx/algorithms/isomorphism/isomorphvf2.py:391\u001b[0m, in \u001b[0;36mGraphMatcher.subgraph_monomorphisms_iter\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    389\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mtest \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmono\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    390\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39minitialize()\n\u001b[0;32m--> 391\u001b[0m \u001b[38;5;28;01myield from\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmatch()\n",
+      "File \u001b[0;32m~/.conda/envs/arkouda-dev/lib/python3.10/site-packages/networkx/algorithms/isomorphism/isomorphvf2.py:316\u001b[0m, in \u001b[0;36mGraphMatcher.match\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    313\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39msemantic_feasibility(G1_node, G2_node):\n\u001b[1;32m    314\u001b[0m     \u001b[38;5;66;03m# Recursive call, adding the feasible state.\u001b[39;00m\n\u001b[1;32m    315\u001b[0m     newstate \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mstate\u001b[38;5;241m.\u001b[39m\u001b[38;5;18m__class__\u001b[39m(\u001b[38;5;28mself\u001b[39m, G1_node, G2_node)\n\u001b[0;32m--> 316\u001b[0m     \u001b[38;5;28;01myield from\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmatch()\n\u001b[1;32m    318\u001b[0m     \u001b[38;5;66;03m# restore data structures\u001b[39;00m\n\u001b[1;32m    319\u001b[0m     newstate\u001b[38;5;241m.\u001b[39mrestore()\n",
+      "File \u001b[0;32m~/.conda/envs/arkouda-dev/lib/python3.10/site-packages/networkx/algorithms/isomorphism/isomorphvf2.py:316\u001b[0m, in \u001b[0;36mGraphMatcher.match\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    313\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39msemantic_feasibility(G1_node, G2_node):\n\u001b[1;32m    314\u001b[0m     \u001b[38;5;66;03m# Recursive call, adding the feasible state.\u001b[39;00m\n\u001b[1;32m    315\u001b[0m     newstate \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mstate\u001b[38;5;241m.\u001b[39m\u001b[38;5;18m__class__\u001b[39m(\u001b[38;5;28mself\u001b[39m, G1_node, G2_node)\n\u001b[0;32m--> 316\u001b[0m     \u001b[38;5;28;01myield from\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmatch()\n\u001b[1;32m    318\u001b[0m     \u001b[38;5;66;03m# restore data structures\u001b[39;00m\n\u001b[1;32m    319\u001b[0m     newstate\u001b[38;5;241m.\u001b[39mrestore()\n",
+      "File \u001b[0;32m~/.conda/envs/arkouda-dev/lib/python3.10/site-packages/networkx/algorithms/isomorphism/isomorphvf2.py:316\u001b[0m, in \u001b[0;36mGraphMatcher.match\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    313\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39msemantic_feasibility(G1_node, G2_node):\n\u001b[1;32m    314\u001b[0m     \u001b[38;5;66;03m# Recursive call, adding the feasible state.\u001b[39;00m\n\u001b[1;32m    315\u001b[0m     newstate \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mstate\u001b[38;5;241m.\u001b[39m\u001b[38;5;18m__class__\u001b[39m(\u001b[38;5;28mself\u001b[39m, G1_node, G2_node)\n\u001b[0;32m--> 316\u001b[0m     \u001b[38;5;28;01myield from\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmatch()\n\u001b[1;32m    318\u001b[0m     \u001b[38;5;66;03m# restore data structures\u001b[39;00m\n\u001b[1;32m    319\u001b[0m     newstate\u001b[38;5;241m.\u001b[39mrestore()\n",
+      "File \u001b[0;32m~/.conda/envs/arkouda-dev/lib/python3.10/site-packages/networkx/algorithms/isomorphism/isomorphvf2.py:312\u001b[0m, in \u001b[0;36mGraphMatcher.match\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    310\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m    311\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m G1_node, G2_node \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcandidate_pairs_iter():\n\u001b[0;32m--> 312\u001b[0m         \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msyntactic_feasibility\u001b[49m\u001b[43m(\u001b[49m\u001b[43mG1_node\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mG2_node\u001b[49m\u001b[43m)\u001b[49m:\n\u001b[1;32m    313\u001b[0m             \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39msemantic_feasibility(G1_node, G2_node):\n\u001b[1;32m    314\u001b[0m                 \u001b[38;5;66;03m# Recursive call, adding the feasible state.\u001b[39;00m\n\u001b[1;32m    315\u001b[0m                 newstate \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mstate\u001b[38;5;241m.\u001b[39m\u001b[38;5;18m__class__\u001b[39m(\u001b[38;5;28mself\u001b[39m, G1_node, G2_node)\n",
+      "File \u001b[0;32m~/.conda/envs/arkouda-dev/lib/python3.10/site-packages/networkx/algorithms/isomorphism/isomorphvf2.py:714\u001b[0m, in \u001b[0;36mDiGraphMatcher.syntactic_feasibility\u001b[0;34m(self, G1_node, G2_node)\u001b[0m\n\u001b[1;32m    712\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m successor \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mG2[G2_node]:\n\u001b[1;32m    713\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m successor \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcore_2:\n\u001b[0;32m--> 714\u001b[0m         \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcore_2\u001b[49m\u001b[43m[\u001b[49m\u001b[43msuccessor\u001b[49m\u001b[43m]\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;129;43;01mnot\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[38;5;129;43;01min\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mG1\u001b[49m\u001b[43m[\u001b[49m\u001b[43mG1_node\u001b[49m\u001b[43m]\u001b[49m:\n\u001b[1;32m    715\u001b[0m             \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;01mFalse\u001b[39;00m\n\u001b[1;32m    716\u001b[0m         \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mtest \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmono\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n",
+      "File \u001b[0;32m~/.conda/envs/arkouda-dev/lib/python3.10/_collections_abc.py:830\u001b[0m, in \u001b[0;36mMapping.__contains__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m    828\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__contains__\u001b[39m(\u001b[38;5;28mself\u001b[39m, key):\n\u001b[1;32m    829\u001b[0m     \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m--> 830\u001b[0m         \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m[\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m]\u001b[49m\n\u001b[1;32m    831\u001b[0m     \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m:\n\u001b[1;32m    832\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;01mFalse\u001b[39;00m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
+    "subgraphs_as_list_of_tuples = [ \n",
+    "                                (src0, dst0, connection_type0, color0, \"0\"),\n",
+    "                                (src2, dst2, connection_type2, color2, \"2\"),\n",
+    "                                (src3, dst3, connection_type3, color3, \"3\"),\n",
+    "                                (src7, dst7, connection_type7, color7, \"7\"),\n",
+    "                                (src5, dst5, connection_type5, color5, \"5\"),\n",
+    "                                (src4, dst4, connection_type4, color4, \"4\"),\n",
+    "                                (src1, dst1, connection_type1, color1, \"1\"),\n",
+    "                                (src6, dst6, connection_type6, color6, \"6\")\n",
+    "                            ]\n",
+    "\n",
     "def edge_match(e1, e2):\n",
     "    return e1[\"connection_type\"] == e2[\"connection_type\"]\n",
     "\n",
@@ -427,11 +507,21 @@
     "        h.add_edge(u, v, connection_type=connection_type[i], color=color[i])\n",
     "\n",
     "    print(f\"Querying for {identifier}...\")\n",
+    "    \n",
     "    start = time.time()\n",
     "    isomatcher = nx.isomorphism.DiGraphMatcher(G,h,edge_match=edge_match)\n",
-    "    motifs = list(isomatcher.subgraph_monomorphisms_iter())\n",
+    "    motifs = []\n",
+    "    for motif in isomatcher.subgraph_monomorphisms_iter():\n",
+    "        motifs.append(motif)\n",
+    "        if len(motifs) % 100 == 0:\n",
+    "            print(f\"Found {len(motifs)} so far\")\n",
+    "\n",
+    "        if len(motifs) > 500:\n",
+    "            break\n",
     "    end = time.time()\n",
-    "    print(f\"Finding {len(motifs):_} motifs took: {end-start} seconds.\")"
+    "\n",
+    "    print(f\"Finding {len(motifs):_} motifs took: {end-start} seconds.\")\n",
+    "    print()"
    ]
   }
  ],
